unfavoriting ui change for smartitem & additional favoriting scripts

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -28,6 +28,8 @@
     "drag_to_reorder": "Drag to reorder",
     "duplicate": "Duplicate",
     "edit": "Edit",
+    "favorite": "Favorite",
+    "unfavorite": "Unfavorite",
     "filter": "Filter",
     "go_back": "Go back",
     "go_forward": "Go forward",
