feat: added favorite collection - migration in DB (v8) + toggle on side

--- a/packages/hoppscotch-common/locales/en.json
+++ b/packages/hoppscotch-common/locales/en.json
@@ -40,6 +40,8 @@
     "more": "More",
     "new": "New",
     "no": "No",
+    "favorite": "Favorite",
+    "unfavorite": "Unfavorite",
     "open_workspace": "Open workspace",
     "paste": "Paste",
     "prettify": "Prettify",
