Updated action translations for file-ph

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -1,76 +1,76 @@
 {
   "action": {
-    "add": "Add",
+    "add": "Magdagdag",
     "autoscroll": "Autoscroll",
-    "cancel": "Cancel",
-    "choose_file": "Choose a file",
-    "choose_workspace": "Choose a workspace",
-    "choose_collection": "Choose a collection",
-    "select_workspace": "Select a workspace",
-    "clear": "Clear",
-    "clear_all": "Clear all",
-    "clear_cache": "Clear Cache",
-    "clear_history": "Clear all History",
-    "clear_unpinned": "Clear Unpinned",
-    "close": "Close",
-    "confirm": "Confirm",
-    "connect": "Connect",
-    "connecting": "Connecting",
-    "copy": "Copy",
-    "create": "Create",
-    "delete": "Delete",
-    "disconnect": "Disconnect",
-    "dismiss": "Dismiss",
-    "done": "Done",
-    "dont_save": "Don't save",
-    "download_file": "Download file",
-    "download_test_report": "Download test report",
-    "drag_to_reorder": "Drag to reorder",
-    "duplicate": "Duplicate",
-    "edit": "Edit",
-    "filter": "Filter",
-    "go_back": "Go back",
-    "go_forward": "Go forward",
-    "group_by": "Group by",
-    "hide_secret": "Hide secret",
+    "cancel": "Kanselahin",
+    "choose_file": "Pumili ng file",
+    "choose_workspace": "Pumili ng workspace",
+    "choose_collection": "Pumili ng koleksyon",
+    "select_workspace": "Pumili ng workspace",
+    "clear": "Burahin",
+    "clear_all": "Burahin lahat",
+    "clear_cache": "Birahin ang Cache",
+    "clear_history": "Burahin Lahat ng History",
+    "clear_unpinned": "Burahin Ang Na-Unpin",
+    "close": "Isara",
+    "confirm": "Kumpirmahin",
+    "connect": "Kumonekta",
+    "connecting": "Kumokonekta",
+    "copy": "Kopyahin",
+    "create": "I-Create",
+    "delete": "Burahin",
+    "disconnect": "Idiskonekta",
+    "dismiss": "I-dismiss",
+    "done": "Tapos Na",
+    "dont_save": "Huwag I-save",
+    "download_file": "I-download ang File",
+    "download_test_report": "I-download ang test report",
+    "drag_to_reorder": "I-drag upang ayusin",
+    "duplicate": "I-duplicate",
+    "edit": "Baguhin",
+    "filter": "I-filter",
+    "go_back": "Bumalik",
+    "go_forward": "Magpatuloy",
+    "group_by": "Igrupo ayon sa",
+    "hide_secret": "Itago ang sikreto",
     "label": "Label",
-    "learn_more": "Learn more",
-    "download_here": "Download here",
-    "less": "Less",
-    "more": "More",
-    "new": "New",
-    "no": "No",
-    "open_workspace": "Open workspace",
-    "paste": "Paste",
-    "prettify": "Prettify",
+    "learn_more": "Alamin pa",
+    "download_here": "I-download dito",
+    "less": "Mas Kaunti",
+    "more": "Higit Pa",
+    "new": "Bago",
+    "no": "Hindi",
+    "open_workspace": "Buksan ang Workspace",
+    "paste": "I-paste",
+    "prettify": "Pagandahin",
     "properties": "Properties",
-    "register": "Register",
-    "remove": "Remove",
-    "remove_instance": "Remove instance",
-    "rename": "Rename",
-    "restore": "Restore",
-    "retry": "Retry",
-    "save": "Save",
-    "save_as_example": "Save as example",
-    "scroll_to_bottom": "Scroll to bottom",
-    "scroll_to_top": "Scroll to top",
-    "search": "Search",
-    "send": "Send",
-    "share": "Share",
-    "show_secret": "Show secret",
-    "start": "Start",
-    "starting": "Starting",
-    "stop": "Stop",
-    "to_close": "to close",
-    "to_navigate": "to navigate",
-    "to_select": "to select",
-    "turn_off": "Turn off",
-    "turn_on": "Turn on",
-    "undo": "Undo",
-    "yes": "Yes",
-    "verify": "Verify",
-    "enable": "Enable",
-    "disable": "Disable"
+    "register": "Mag-register",
+    "remove": "Tanggalin",
+    "remove_instance": "Alising ang instance",
+    "rename": "Palitan ang pangalan",
+    "restore": "Ibalik",
+    "retry": "Subukan muli",
+    "save": "I-save",
+    "save_as_example": "I-save bilang halimbawa",
+    "scroll_to_bottom": "I-scroll sa pinakababa",
+    "scroll_to_top": "I-scroll sa pinakataas",
+    "search": "Maghanap",
+    "send": "Ipadala",
+    "share": "I-share",
+    "show_secret": "Ipakita ang sikreto",
+    "start": "Sumalan",
+    "starting": "Nagsisimula na",
+    "stop": "Hinto",
+    "to_close": "para isara",
+    "to_navigate": "upang mag-navigate",
+    "to_select": "upang pumili",
+    "turn_off": "Isara",
+    "turn_on": "Buksan",
+    "undo": "I-undo",
+    "yes": "Oo",
+    "verify": "I-verify",
+    "enable": "I-enable",
+    "disable": "I-disable"
   },
   "activity_logs": {
     "ACTIVITY_LOG_DELETE": "Activity log has been deleted",
