--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -343,8 +343,8 @@
     "variable": "Variable {count}"
   },
   "documentation": {
-    "generate": "Generate documentation",
-    "generate_message": "Import any Hoppscotch collection to generate API documentation on-the-go."
+    "generate": "Gumawa ng documentation",
+    "generate_message": "Mag-import ng kahit anong koleksyon sa Hoppscotch upang mag generate ng API documentation on-the-go."
   },
   "empty": {
     "activity_logs": "No activity logs found",
