--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -118,52 +118,52 @@
     "add_pfx_or_pkcs_file": "Magdagdag ng PFX/PKCS12 File"
   },
   "app": {
-    "chat_with_us": "Chat with us",
-    "contact_us": "Contact us",
+    "chat_with_us": "Makipag-chat sa amin",
+    "contact_us": "Makipag-ugnayan sa amin",
     "cookies": "Cookies",
-    "copy": "Copy",
-    "copy_interface_type": "Copy interface type",
-    "copy_user_id": "Copy User Auth Token",
-    "developer_option": "Developer options",
-    "developer_option_description": "Developer tools which helps in development and maintenance of Hoppscotch.",
+    "copy": "Kopyahin",
+    "copy_interface_type": "Kopyahin ang interface type",
+    "copy_user_id": "Kopyahin ang User Auth Token",
+    "developer_option": "Mga option para sa developer",
+    "developer_option_description": "Mga gamit ng developer para makatulong sa pagpapaunlad at pagpapanatili ng Hoppscotch.",
     "discord": "Discord",
-    "documentation": "Documentation",
+    "documentation": "Dokumentasyon",
     "github": "GitHub",
-    "help": "Help & feedback",
+    "help": "Tulong at feedback",
     "home": "Home",
-    "invite": "Invite",
-    "invite_description": "Hoppscotch is an open source API development ecosystem. We designed a simple and intuitive interface for creating and managing your APIs. Hoppscotch is a tool that helps you build, test, document and share your APIs.",
-    "invite_your_friends": "Invite your friends",
-    "join_discord_community": "Join our Discord community",
-    "keyboard_shortcuts": "Keyboard shortcuts",
+    "invite": "Imbita",
+    "invite_description": "Ang Hoppscotch ay isang open source API development ecosystem. Amin itong dinisenyo na may simple at intuitive na interface para sa pagbuo at pag-manage ng iyong mga API. Ang Hopppscotch ay isang gamit na makakatulong sa iyo sa pagbuo, pag-test, idokumento, at ibahagi ang iyong mga API.",
+    "invite_your_friends": "Imbitahin ang iyong mga kaibigan",
+    "join_discord_community": "Sumali sa aming komumidad sa Discord",
+    "keyboard_shortcuts": "Mga shortcut sa keyboard",
     "name": "Hoppscotch",
-    "new_version_found": "New version found. Refresh to update.",
-    "open_in_hoppscotch": "Open in Hoppscotch",
-    "options": "Options",
+    "new_version_found": "May nakitang bagong bersyon. I-refresh upang iupdate.",
+    "open_in_hoppscotch": "Buksan sa Hoppscotch",
+    "options": "Mga option",
     "proxy_privacy_policy": "Proxy privacy policy",
     "reload": "Reload",
     "search": "Search",
-    "share": "Share",
-    "shortcuts": "Shortcuts",
-    "social_description": "Follow us on social media to stay updated with the latest news, updates and releases.",
-    "social_links": "Social links",
+    "share": "I-share",
+    "shortcuts": "Mga shortcut",
+    "social_description": "Sundan kami sa social media upang manatiling updated sa mga napapanahong balita, pagbabago, at mga release.",
+    "social_links": "Mga social link",
     "spotlight": "Spotlight",
     "status": "Status",
-    "status_description": "Check the status of the website",
+    "status_description": "I-check ang status ng website",
     "terms_and_privacy": "Terms and privacy",
     "twitter": "Twitter",
-    "type_a_command_search": "Type a command or search…",
-    "we_use_cookies": "We use cookies",
-    "updated_text": "Hoppscotch has been updated to v{version} 🎉",
-    "whats_new": "What's new?",
-    "see_whats_new": "See what's new",
+    "type_a_command_search": "Mag-type ng command o search…",
+    "we_use_cookies": "Gumagamit kami ng cookies",
+    "updated_text": "Ang Hoppscotch ay na-update na sa v{version} 🎉",
+    "whats_new": "Ano ang mga nagbago?",
+    "see_whats_new": "Tingnan kung ano ang nagbago",
     "wiki": "Wiki",
-    "collapse_sidebar": "Collapse Sidebar",
-    "continue_to_dashboard": "Continue to Dashboard",
-    "expand_sidebar": "Expand Sidebar",
-    "no_name": "No name",
-    "open_navigation": "Open Navigation",
-    "read_documentation": "Read Documentation",
+    "collapse_sidebar": "Paliitin ang sidebar",
+    "continue_to_dashboard": "Magpatuloy sa Dashboard",
+    "expand_sidebar": "Palakihin ang Sidebar",
+    "no_name": "Walang pangalan",
+    "open_navigation": "Buksan ang navigation",
+    "read_documentation": "Basahin ang Dokumentasyon",
     "default": "default: {value}"
   },
   "auth": {
