Updated count translation or fil-ph

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -334,7 +334,7 @@
   },
   "count": {
     "header": "Header {count}",
-    "message": "Message {count}",
+    "message": "Mensahe {count}",
     "parameter": "Parameter {count}",
     "key": "Key {count}",
     "description": "Description {count}",
