Added auth translation for fil-PH

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -167,26 +167,26 @@
     "default": "default: {value}"
   },
   "auth": {
-    "account_deactivated": "Your account has been deactivated. Contact the admin to get access.",
-    "account_exists": "Account exists with different credential - Login to link both accounts",
-    "all_sign_in_options": "All sign in options",
-    "continue_with_auth_provider": "Continue with {provider}",
-    "continue_with_email": "Continue with Email",
-    "continue_with_github": "Continue with GitHub",
-    "continue_with_github_enterprise": "Continue with GitHub Enterprise",
-    "continue_with_google": "Continue with Google",
-    "continue_with_microsoft": "Continue with Microsoft",
+    "account_deactivated": "Na-deactivate ang iyyong account. Makipag-ugnayan sa admin para makakuha ng access.",
+    "account_exists": "Mayroong account na may ibang credential - mag-login upang pagsamahin ang parehas na mga account.",
+    "all_sign_in_options": "Lahang ng mga sign in option",
+    "continue_with_auth_provider": "Magpatuloy sa {provider}",
+    "continue_with_email": "Magpatuloy gamit ang Email",
+    "continue_with_github": "Magpatuloy gamit ang GitHub",
+    "continue_with_github_enterprise": "Magpatuloy gamit ang GitHub Enterprise",
+    "continue_with_google": "Magpatuloy gamit ang Google",
+    "continue_with_microsoft": "Magpatuloy gamit ang Microsoft",
     "email": "Email",
-    "logged_out": "Logged out",
+    "logged_out": "Na-log out",
     "login": "Login",
-    "login_success": "Successfully logged in",
-    "login_to_hoppscotch": "Login to Hoppscotch",
+    "login_success": "Tagumpay sa log in",
+    "login_to_hoppscotch": "Mag-login sa Hoppscotch",
     "logout": "Logout",
-    "re_enter_email": "Re-enter email",
-    "send_magic_link": "Send a magic link",
+    "re_enter_email": "I-enter ang email muli",
+    "send_magic_link": "Magpadala ng magic link",
     "sync": "Sync",
-    "we_sent_magic_link": "We sent you a magic link!",
-    "we_sent_magic_link_description": "Check your inbox - we sent an email to {email}. It contains a magic link that will log you in."
+    "we_sent_magic_link": "Pinadala na namin ang magic link!",
+    "we_sent_magic_link_description": "I-check ang iyong inbox - nagpadala kami ng email sa {email}. Mayroon itong magic link na pwedeng gamitin para makapag log in."
   },
   "authorization": {
     "generate_token": "Generate Token",
