Updated oauth translations for fil-PH

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -196,31 +196,31 @@
     "inherited_from": "Minana ang {auth} mula sa parent koleksyon {collection} ",
     "learn": "Alamin kung paano",
     "oauth": {
-      "redirect_auth_server_returned_error": "Auth Server returned an error state",
-      "redirect_auth_token_request_failed": "Request to get the auth token failed",
-      "redirect_auth_token_request_invalid_response": "Invalid Response from the Token Endpoint when requesting for an auth token",
-      "redirect_invalid_state": "Invalid State value present in the redirect",
-      "redirect_no_auth_code": "No Authorization Code present in the redirect",
-      "redirect_no_client_id": "No Client ID defined",
-      "redirect_no_client_secret": "No Client Secret Defined",
-      "redirect_no_code_verifier": "No Code Verifier Defined",
-      "redirect_no_token_endpoint": "No Token Endpoint Defined",
-      "something_went_wrong_on_oauth_redirect": "Something went wrong during OAuth Redirect",
-      "something_went_wrong_on_token_generation": "Something went wrong on token generation",
-      "token_generation_oidc_discovery_failed": "Failure on token generation: OpenID Connect Discovery Failed",
+      "redirect_auth_server_returned_error": "Nagbalik ang Auth Server ng error state",
+      "redirect_auth_token_request_failed": "Nag-fail ang request upang makakuha ng auth token",
+      "redirect_auth_token_request_invalid_response": "Nakatanggap ng maling response mula sa Token Endpoint kapag nag-request ng auth token",
+      "redirect_invalid_state": "Maling value ng state sa redirect",
+      "redirect_no_auth_code": "Walang Authorization Code sa redirect",
+      "redirect_no_client_id": "Walang Client ID na Inilagay",
+      "redirect_no_client_secret": "Walang Client Secret na Inilagay",
+      "redirect_no_code_verifier": "Walang Code Verifier na Inilagay",
+      "redirect_no_token_endpoint": "Walang Token Endpoint na Inilagay",
+      "something_went_wrong_on_oauth_redirect": "Mayroong mali habang nire-redirect ang OAuth",
+      "something_went_wrong_on_token_generation": "Maroong mali sa pag-generate ng token",
+      "token_generation_oidc_discovery_failed": "Nag-fail and pag-generate ng token: Ang Pag-Discover ng OpenID Connect ay Nag-Fail",
       "grant_type": "Grant Type",
       "grant_type_auth_code": "Authorization Code",
-      "token_fetched_successfully": "Token fetched successfully",
-      "token_fetch_failed": "Failed to fetch token",
-      "validation_failed": "Validation Failed, please check the form fields",
-      "no_refresh_token_present": "No Refresh Token present. Please run the token generation flow again",
-      "refresh_token_request_failed": "Refresh token request failed",
-      "token_refreshed_successfully": "Token refreshed successfully",
+      "token_fetched_successfully": "Matagumpay na nakuha ang token",
+      "token_fetch_failed": "Nag-fail sa pagkuha ng token",
+      "validation_failed": "Nag-Fail ang Validation, paki check ang mga laman ng form",
+      "no_refresh_token_present": "Walang Refesh Token. Muling patakbuhin ang token generation",
+      "refresh_token_request_failed": "Ang request para sa token refresh ay nag-fail",
+      "token_refreshed_successfully": "Matagumpay na na-refresh ang token",
       "label_authorization_endpoint": "Authorization Endpoint",
       "label_client_id": "Client ID",
       "label_client_secret": "Client Secret",
       "label_code_challenge": "Code Challenge",
-      "label_code_challenge_method": "Code Challenge Method",
+      "label_code_challenge_method": "Paraan ng Code Challenge",
       "label_code_verifier": "Code Verifier",
       "label_scopes": "Scopes",
       "label_token_endpoint": "Token Endpoint",
@@ -231,8 +231,8 @@
       "label_auth_code": "Authorization Code",
       "label_client_credentials": "Client Credentials",
       "label_send_as": "Client Authentication",
-      "label_send_in_body": "Send Credentials in Body",
-      "label_send_as_basic_auth": "Send Credentials as Basic Auth"
+      "label_send_in_body": "I-Send Ang Mga Credential sa Body",
+      "label_send_as_basic_auth": "I-Send Ang Mga Credential Bilang Basic Auth"
     },
     "pass_key_by": "Pass by",
     "pass_by_query_params_label": "Query Parameters",
