Partial translation for authorization for fil-PH

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -234,16 +234,16 @@
       "label_send_in_body": "I-Send Ang Mga Credential sa Body",
       "label_send_as_basic_auth": "I-Send Ang Mga Credential Bilang Basic Auth"
     },
-    "pass_key_by": "Pass by",
+    "pass_key_by": "Ipasa bilang",
     "pass_by_query_params_label": "Query Parameters",
     "pass_by_headers_label": "Headers",
     "password": "Password",
-    "save_to_inherit": "Please save this request in any collection to inherit the authorization",
+    "save_to_inherit": "I-save ang request na ito sa kahit anong koleksyon upang ma-inherit ang authorization",
     "token": "Token",
     "type": "Authorization Type",
     "username": "Username",
     "advance_config": "Advanced Configuration",
-    "advance_config_description": "Hoppscotch automatically assigns default values to certain fields if no explicit value is provided",
+    "advance_config_description": "Ang Hoppscotch ay awtomatikong ina-assign ang default values sa ibang fields kapag walang explicit value na binigay",
     "aws_signature": {
       "access_key": "Access Key",
       "secret_key": "Secret Key",
