Collection fil-ph translation

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -263,31 +263,31 @@
     }
   },
   "collection": {
-    "title": "Collection",
-    "run": "Run Collection",
-    "created": "Collection created",
-    "different_parent": "Cannot reorder collection with different parent",
-    "edit": "Edit Collection",
-    "import_or_create": "Import or create a collection",
-    "import_collection": "Import Collection",
-    "invalid_name": "Please provide a name for the collection",
-    "invalid_root_move": "Collection already in the root",
-    "moved": "Moved Successfully",
-    "my_collections": "Personal Collections",
-    "name": "My New Collection",
-    "name_length_insufficient": "Collection name should be at least 3 characters long",
-    "new": "New Collection",
-    "order_changed": "Collection Order Updated",
-    "properties": "Collection Properties",
-    "properties_updated": "Collection Properties Updated",
-    "renamed": "Collection renamed",
-    "request_in_use": "Request in use",
-    "save_as": "Save as",
-    "save_to_collection": "Save to Collection",
-    "select": "Select a Collection",
-    "select_location": "Select location",
-    "details": "Details",
-    "duplicated": "Collection duplicated"
+    "title": "Koleksyon",
+    "run": "Patakbuhin and Koleksyon",
+    "created": "Nagawa ang Koleksyon",
+    "different_parent": "Hindi maaring i-reorder ang koleksyon na may ibang parent",
+    "edit": "Baguhin ang Koleksyon",
+    "import_or_create": "I-import o gumawa ng koleksyon",
+    "import_collection": "Mag-Import ng Koleksyon",
+    "invalid_name": "Ilagay ang pangalan ng koleksyon",
+    "invalid_root_move": "Ang koleksyon ay nasa root na",
+    "moved": "Matagumpay Na Nalipat",
+    "my_collections": "Personal na Koleksyon",
+    "name": "Aking Bagong Koleksyon",
+    "name_length_insufficient": "Hindi dapat bababa sa 3 characters ang haba ng pangalan ng koleksyon",
+    "new": "Bagong Koleksyon",
+    "order_changed": "Na-Update Ang Order Ng Koleksyon",
+    "properties": "Properties ng Koleksyon",
+    "properties_updated": "Na-Update ang Properties ng Koleksyon",
+    "renamed": "Pinangalanan ang koleksyon",
+    "request_in_use": "Ang request ay ginagamit",
+    "save_as": "I-save bilang",
+    "save_to_collection": "I-save sa Koleksyon",
+    "select": "Pumili ng Koleksyon",
+    "select_location": "Pumili ng lokasyon",
+    "details": "Detalye",
+    "duplicated": "Dinuplicate ang koleksyon"
   },
   "confirm": {
     "close_unsaved_tab": "Are you sure you want to close this tab?",
