Confirm fil-ph translation

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -290,24 +290,24 @@
     "duplicated": "Dinuplicate ang koleksyon"
   },
   "confirm": {
-    "close_unsaved_tab": "Are you sure you want to close this tab?",
-    "close_unsaved_tabs": "Are you sure you want to close all tabs? {count} unsaved tabs will be lost.",
-    "delete_all_activity_logs": "Are you sure you want to delete all activity logs?",
-    "exit_team": "Are you sure you want to leave this workspace?",
-    "logout": "Are you sure you want to logout?",
-    "remove_collection": "Are you sure you want to permanently delete this collection?",
-    "remove_environment": "Are you sure you want to permanently delete this environment?",
-    "remove_folder": "Are you sure you want to permanently delete this folder?",
-    "remove_history": "Are you sure you want to permanently delete all history?",
-    "remove_request": "Are you sure you want to permanently delete this request?",
-    "remove_response": "Are you sure you want to permanently delete this response?",
-    "remove_shared_request": "Are you sure you want to permanently delete this shared request?",
-    "remove_team": "Are you sure you want to delete this workspace?",
-    "remove_telemetry": "Are you sure you want to opt-out of Telemetry?",
-    "request_change": "Are you sure you want to discard current request, unsaved changes will be lost.",
-    "save_unsaved_tab": "Do you want to save changes made in this tab?",
-    "sync": "Would you like to restore your workspace from cloud? This will discard your local progress.",
-    "delete_access_token": "Are you sure you want to delete the access token {tokenLabel}?"
+    "close_unsaved_tab": "Sigurado ka bang gusto mong isara ang tab na ito?",
+    "close_unsaved_tabs": "Sigurado ka bang gusto mong isara ang lahat ng mga tab? Mayroon pang {count} na (mga) hindi pa na-se-save na tab and mawawala.",
+    "delete_all_activity_logs": "Sigurado ka bang nais mong burahin lahat ng mga activity log?",
+    "exit_team": "Sigurado ka bang gusto mong iwan ang worksapce na ito?",
+    "logout": "Sigurado ka bang gusto mong mag logout?",
+    "remove_collection": "Sigurado ka bang gusto mong permanenteng burahin ang koleksyon na ito?",
+    "remove_environment": "Sigurado ka bang gusto mong permanenteng burahin ang environment na ito?",
+    "remove_folder": "Sigurado ka bang gusto mong permanenteng burahin ang folder na ito?",
+    "remove_history": "Sigurado ka bang gusto mong permanenteng burahin ang lahat ng history?",
+    "remove_request": "Sigurado ka bang gusto mong permanenteng burahin ang request na ito?",
+    "remove_response": "Sigurado ka bang gusto mong permanenteng burahin ang response na ito?",
+    "remove_shared_request": "Sigurado ka bang gusto mong permanenteng burahin ang shared request na ito?",
+    "remove_team": "Sigurado ka bang gusto mong burahin ang workspace na ito?",
+    "remove_telemetry": "Sigurado ka bang gusto mong mag-opt out sa telemetry?",
+    "request_change": "Sigurado ka bang gusto mong tanggalin ang kasalukuyang request, lahat ng mga hindi pa na-se-save na pagbabago ay mawala.",
+    "save_unsaved_tab": "Gusto mo bang i-save ang mga pagbabago na ginawa sa tab na ito?",
+    "sync": "Nais mo bang i-restore ang workspace galing sa cloud? Matatanggal nito ang iyong mga ginawa sa local.",
+    "delete_access_token": "Sigurado ka bang gusto mong burahing ang access token {tokenLabel}?"
   },
   "context_menu": {
     "add_parameters": "Idagdag sa mga parameter",
