i18n: empty section translation to fil-PH

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -347,36 +347,36 @@
     "generate_message": "Mag-import ng kahit anong koleksyon sa Hoppscotch upang mag generate ng API documentation on-the-go."
   },
   "empty": {
-    "activity_logs": "No activity logs found",
-    "authorization": "This request does not use any authorization",
-    "body": "This request does not have a body",
-    "collection": "Collection is empty",
-    "collections": "Collections are empty",
-    "documentation": "Connect to a GraphQL endpoint to view documentation",
-    "empty_schema": "No schema found",
-    "endpoint": "Endpoint cannot be empty",
-    "environments": "Environments are empty",
-    "folder": "Folder is empty",
-    "headers": "This request does not have any headers",
-    "history": "History is empty",
-    "invites": "Invite list is empty",
-    "members": "Workspace is empty",
-    "parameters": "This request does not have any parameters",
-    "pending_invites": "There are no pending invites for this workspace",
-    "profile": "Login to view your profile",
-    "protocols": "Protocols are empty",
-    "request_variables": "This request does not have any request variables",
-    "schema": "Connect to a GraphQL endpoint to view schema",
-    "search_environment": "No matching environment found for",
-    "secret_environments": "Secrets are not synced to Hoppscotch",
-    "shared_requests": "Shared requests are empty",
-    "shared_requests_logout": "Login to view your shared requests or create a new one",
-    "subscription": "Subscriptions are empty",
-    "team_name": "Workspace name empty",
-    "teams": "You don't belong to any workspaces",
-    "tests": "There are no tests for this request",
-    "access_tokens": "Access tokens are empty",
-    "response": "No response received"
+    "activity_logs": "Walang nakitang mga activity log",
+    "authorization": "Ang request na ito ayy hindi gumagamit ng kahit anong authorization",
+    "body": "Ang request na ito ay walang body",
+    "collection": "Walang laman ang koleksyon",
+    "collections": "Walang laman ang mga koleksyon",
+    "documentation": "Upang makita ang documentation, kumonekta sa isang GraphQL endpoint",
+    "empty_schema": "Walang nakitang schema",
+    "endpoint": "Hindi pwedeng walang endpoint",
+    "environments": "Ang environments ay walang laman",
+    "folder": "Walang laman ang folder",
+    "headers": "Ang request na ito ay walang kahit anong mga header",
+    "history": "Walang laman ang history",
+    "invites": "Walang laman ang listahan ng mga imbitasyon",
+    "members": "Walang laman ang workspace",
+    "parameters": "Ang request na ito ay walang kahit anong parameters",
+    "pending_invites": "Walang inaantayy na mga imbitasyon sa workspace na ito",
+    "profile": "Mag-login para makita ang iyong profile",
+    "protocols": "Walang laman ang mga protocol",
+    "request_variables": "Ang request na ito ay walang kahit na anong request variables",
+    "schema": "Kumonekta sa isang GraphQL endpoint para makita ang schema",
+    "search_environment": "Walang nahanap na katugmang environment",
+    "secret_environments": "Ang mga secret ay hindi naka-sync sa Hoppscotch",
+    "shared_requests": "Walang laman ang mga shared request",
+    "shared_requests_logout": "Mag-log in para makita ang iyong mga shared request o gumawa ng bago",
+    "subscription": "Walang laman ang mga subscription",
+    "team_name": "Walang laman ang pangalan ng workspace",
+    "teams": "Hindi ka kabilang sa anumang mga workspace",
+    "tests": "Walang mga test sa request na ito",
+    "access_tokens": "Walang laman ang mga access token",
+    "response": "Walang natanggap na response"
   },
   "environment": {
     "heading": "Environment",
