i18n: environment translation to fil-ph

--- a/packages/hoppscotch-common/locales/fil-PH.json
+++ b/packages/hoppscotch-common/locales/fil-PH.json
@@ -380,44 +380,44 @@
   },
   "environment": {
     "heading": "Environment",
-    "add_to_global": "Add to Global",
-    "added": "Environment addition",
-    "create_new": "Create new environment",
-    "created": "Environment created",
-    "deleted": "Environment deletion",
-    "duplicated": "Environment duplicated",
-    "edit": "Edit Environment",
-    "empty_variables": "No variables",
+    "add_to_global": "Idagdag sa Global",
+    "added": "Karagdagan sa environment",
+    "create_new": "Gumawa ng bagong environment",
+    "created": "Nakagawa ng environment",
+    "deleted": "Pag-delete ng environment",
+    "duplicated": "Dinuplicate ang environment",
+    "edit": "Baguhin ang Environment",
+    "empty_variables": "Walang variables",
     "global": "Global",
-    "global_variables": "Global variables",
-    "import_or_create": "Import or create a environment",
-    "invalid_name": "Please provide a name for the environment",
-    "list": "Environment variables",
-    "my_environments": "Personal Environments",
-    "name": "Name",
-    "nested_overflow": "nested environment variables are limited to 10 levels",
-    "new": "New Environment",
-    "no_active_environment": "No active environment",
-    "no_environment": "No environment",
-    "no_environment_description": "No environments were selected. Choose what to do with the following variables.",
-    "quick_peek": "Environment Quick Peek",
-    "replace_with_variable": "Replace with variable",
+    "global_variables": "Mga global variable",
+    "import_or_create": "Mag-import o gumawa ng environment",
+    "invalid_name": "Mangyaring maglagay ng pangalan para sa environment",
+    "list": "Mga environment variable",
+    "my_environments": "Mga Personal na Environment",
+    "name": "Pangalan",
+    "nested_overflow": "ang mga nested environment variable ay limitado sa 10 level",
+    "new": "Bagong Environment",
+    "no_active_environment": "Walang aktibong environment",
+    "no_environment": "Walang environment",
+    "no_environment_description": "Walang piniling mga environment. Mamili ng gusto mong gawin sa mga sumusunod na variable.",
+    "quick_peek": "Silipin ang Environment",
+    "replace_with_variable": "Palitan ng variable",
     "scope": "Scope",
-    "secrets": "Secrets",
+    "secrets": "Mga secret",
     "secret_value": "Secret value",
-    "select": "Select environment",
-    "set": "Set environment",
-    "set_as_environment": "Set as environment",
-    "short_name": "Environment needs to have minimum 3 characters",
-    "team_environments": "Workspace Environments",
-    "title": "Environments",
-    "updated": "Environment updated",
+    "select": "Pumili ng environment",
+    "set": "I-set ang environment",
+    "set_as_environment": "I-set bilang environment",
+    "short_name": "Ang pangalan ng environment ay dapat mayroong hindi baba sa 3 characters",
+    "team_environments": "Mga Workspace Environments",
+    "title": "Mga Environment",
+    "updated": "Na-update ang environment",
     "value": "Value",
     "variable": "Variable",
-    "variables": "Variables",
-    "variable_list": "Variable List",
+    "variables": "Mga Variable",
+    "variable_list": "Listahan ng Variable",
     "properties": "Environment Properties",
-    "details": "Details"
+    "details": "Mga Detalye"
   },
   "error": {
     "network": {
